--- a/src/App.css
+++ b/src/App.css
@@ -1112,6 +1112,7 @@ body{
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 25px;
   margin-top: 20px;
+  width: 95%;
 }
 
 .card {
